HSEARCH-2951 Run all tests except WildFly server based using illegal-access=deny